--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,27 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <!--Netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.20.Final</version>
+        </dependency>
+        <!--ProtoBuf-->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>maven-ali</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -200,4 +220,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
